tried to fix scale issue

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <li>CONTACTS</li>
                 </ul>
                 <div class="end_nav common-font">
-                    <div class="number">+7 (928) 768-32-39</div>
+                    <div class="number common-font">+7 (928) 768-32-39</div>
                     <button class="gold-button" style="font-size: 0.8em;"><em>Request a call</em></button>
                 </div>
             </nav>
@@ -98,10 +98,7 @@
                 <div class="header_of_third_section">
                     <h3 class="header-text common-font">online control</h3>
                     <img class="picture_of_camera" src="img/camera.svg" alt=""></div>
-                <div class="player">
-                    <img class="repair_img" src="img/repair.png" alt="">
-                    <!-- <img class="player_button" src="img/player_button.svg" alt="">   -->
-                </div>
+                <div class="player"></div>
                 <div class="about_camera common-font black_text">
                     <div class="hate"><img id="picture_of_line" src="img/line.svg" alt=""></div> 
                     <p>At each facility, a camera is installed that broadcasts the progress of work on the clock. At any time, you can go to our website and monitor the progress of work in your apartment. You can watch the live broadcast from one of our facilities! Leave a request below and you will receive a link to the broadcast.</p>
