--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <section class="second_step">
             <div class="content_of_second_section">
                 <div class="nav_of_second_section header-text">
-                    <ul>
+                    <ul class="noss">
                         <li><span class="line">Rostov-on-Don, Admiral</span></li>
                         <li>Sochi Thieves</li>
                         <li>Rostov-on-Don Patriotic</li>
@@ -62,9 +62,9 @@
                <div class="test">
                     <div class="Completed_projects">
                         <h2 class="header-text gold-text ">Completed <br> projects</h2>
-                        <p class="common-font monitor">Only a small part of the work performed by our company is presented on the site. For 14 years on in the construction     market we have made happy more than 1000 families</p>
-                        <div class="slider_arrows"><img src="img/slider_arrows.svg" alt=""></div>
+                        <p class="common-font">Only a small part of the work performed by our company is presented on the site. For 14 years on in the construction     market we have made happy more than 1000 families</p>
                    </div>
+                   
                    <div class="description">
                         <div class="column1">
                             <div>
@@ -89,6 +89,7 @@
                             </div>
                         </div>
                     </div>
+                    <div class="slider_arrows"><img src="img/slider_arrows.svg" alt=""></div>
                     <div class="slider"><img id="picture" src="img/room.png" alt=""></div>
                </div>
             </div>
