--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans&   display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <!-- <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans&   family=Yeseva+One&display=swap" rel="stylesheet"> -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Yeseva+One&display=swap" rel="stylesheet">
@@ -355,9 +354,9 @@
                         </div>
                     </div>    
                 </form>
-                <div class="nansen header-text gold-text">
-                    <p style="text-align: center;">Rostov-on-Don, Nansen St., 239 Shopping Center <br>
-                    Decorum Tel +7 (928) 768 32 29
+                <div class="nansen header-text common-font gold-text">
+                    <p class="gold-text" style="text-align: center;">Rostov-on-Don, Nansen St., 239 Shopping Center
+                    Decorum <br> Tel +7 (928) 768 32 29
                     </p>
                 </div>
                 <div class="sm"><img src="img/sm.svg" alt=""></div>
