--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
         <section class="seventh_step">
             <div class="content_of_seventh_step">
                 <div class="header_of_fourth_section header_of_seventh_section">
-                    <h3 class="black_text our_clients">our clients</h3>
+                    <h3 class="black_text our_clients header-text">our clients</h3>
                     <img src="img/handshake.svg" alt="">
                     <div class="desc_of_h_7th">
                         <p class="common-font black_text">80% of our customers recommend us to their friends and family.</p>
@@ -360,7 +360,7 @@
                     </p>
                 </div>
                 <div class="sm"><img src="img/sm.svg" alt=""></div>
-                <div class="map"><img src="img/map1.png" alt=""></div>
+                <div class="map"></div>
             </div>
         </section>     
 
