--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Yeseva+One&display=swap" rel="stylesheet">
-    <link type="image/png" sizes="16x16" rel="icon" href=".../icons8-design-16.png">
+    <link type="image/png" sizes="16x16" rel="icon" href="img/icons8-design-16.png">
     <title>IC "Repair Design Project"</title>
 </head>
 <body>
