make links great again

--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
     <header>
         <section class="header_nav">
             <nav class="header_content">
-                <p class="logo gold-text">IC "Repair Design Project"</p>
+                <p class="logo gold-text"><a href="#">IC "Repair Design Project"</a></p>
                 <ul class="mid_nav common-font">
-                    <li>HOME</li>
-                    <li>PROJECTS</li>
-                    <li>MEASUREMENT</li>
-                    <li>TEAM</li>
-                    <li>REVIEWS</li>
-                    <li>CONTACTS</li>
+                    <li><a href="#">HOME</a></li>
+                    <li><a href="#">PROJECTS</a></li>
+                    <li><a href="#">MEASUREMENT</a></li>
+                    <li><a href="#">TEAM</a></li>
+                    <li><a href="#">REVIEWS</a></li>
+                    <li><a href="#">CONTACTS</a></li>
                 </ul>
                 <div class="end_nav common-font">
-                    <div class="number common-font">+7 (928) 768-32-39</div>
+                    <div class="number common-font"><a href="callto:+7 (928) 768-32-39">+7 (928) 768-32-39</a></div>
                     <button class="gold-button" style="font-size: 0.8em;"><em>Request a call</em></button>
                 </div>
             </nav>
@@ -54,9 +54,9 @@
             <div class="content_of_second_section">
                 <div class="nav_of_second_section header-text">
                     <ul class="noss">
-                        <li><span class="line">Rostov-on-Don, Admiral</span></li>
-                        <li>Sochi Thieves</li>
-                        <li>Rostov-on-Don Patriotic</li>
+                        <li><a href="#"><span class="line">Rostov-on-Don, Admiral</span></a></li>
+                        <li><a href="#">Sochi Thieves</a></li>
+                        <li><a href="#">Rostov-on-Don Patriotic</a></li>
                     </ul>
                 </div>
                <div class="test">
@@ -233,17 +233,17 @@
                     </div>
                     <div class="list_of_arch_styles common-font">
                         <ul class="arch">
-                             <li><span class="gold-text line">American classic</span></li>
-                             <li>Empire</li>
-                             <li>Classical</li>
-                             <li>Loft</li>
-                             <li>Minimalism</li>
-                             <li>Provence</li>
-                             <li>Romanticism</li>
-                             <li>Scandinavian style</li>
-                             <li>Mediterranean style</li>
-                             <li>High tech</li>
-                             <li>Eclecticism</li>
+                             <li><a href="#"><span class="gold-text line">American classic</span></a></li>
+                             <li><a href="#">Empire</a></li>
+                             <li><a href="#">Classical</a></li>
+                             <li><a href="#">Loft</a></li>
+                             <li><a href="#">Minimalism</a></li>
+                             <li><a href="#">Provence</a></li>
+                             <li><a href="#">Romanticism</a></li>
+                             <li><a href="#">Scandinavian style</a></li>
+                             <li><a href="#">Mediterranean style</a></li>
+                             <li><a href="#">High tech</a></li>
+                             <li><a href="#">Eclecticism</a></li>
                         </ul>
                     </div>
                 </div>
@@ -372,15 +372,15 @@
         <div class="content_of_footer">
             <div class="logo gold-text">IC "Repair Design Project"</div>
             <ul class="mid_nav common-font">
-                <li>HOME</li>
-                <li>PROJECTS</li>
-                <li>MEASUREMENT</li>
-                <li>TEAM</li>
-                <li>REVIEWS</li>
-                <li>CONTACTS</li>
+                <li><a href="#">HOME</a></li>
+                <li><a href="#">PROJECTS</a></li>
+                <li><a href="#">MEASUREMENT</a></li>
+                <li><a href="#">TEAM</a></li>
+                <li><a href="#">REVIEWS</a></li>
+                <li><a href="#">CONTACTS</a></li>
             </ul>
              <div class="end_nav common-font">
-                <div class="number">+7 (928) 768-32-39</div>
+                <div class="number"><a href="callto:+7 (928) 768-32-39">+7 (928) 768-32-39</a></div>
                 <button class="gold-button" style="font-size: 0.8em;"><em>Request a call</em></button>
             </div>
         </div>    
