--- a/index.html
+++ b/index.html
@@ -60,37 +60,31 @@
                     </ul>
                 </div>
                <div class="test">
-                    <div class="Completed_projects">
+                    <div class="content_of_test">
                         <h2 class="header-text gold-text ">Completed <br> projects</h2>
                         <p class="common-font">Only a small part of the work performed by our company is presented on the site. For 14 years on in the construction     market we have made happy more than 1000 families</p>
-                   </div>
-                   
-                   <div class="description">
-                        <div class="column1">
+                        <div class="wrapper"><img id="picture" src="img/room.png" alt=""></div>
+                       <div class="description">
                             <div>
                                 <h3>City:</h3>
                                 <p class="common-font">Rostov-on-Don <br> 
-                                LCD admiral</p>
+                                    LCD admiral</p>
                             </div>
                             <div>
                                 <h3>Repair time:</h3>
                                 <p class="common-font">3.5 months</p>
                             </div>
-                        </div>
-                        <div class="column2">
                             <div>
                                 <h3>apartment area:</h3>
                                 <p class="common-font">81 m2</p>
                             </div>
-                            
                             <div>
                                 <h3>Repair Cost:</h3>
                                 <p class="common-font">Upon request</p>
                             </div>
                         </div>
+                        <div class="slider_arrows"><img src="img/slider_arrows.svg" alt=""></div>
                     </div>
-                    <div class="slider_arrows"><img src="img/slider_arrows.svg" alt=""></div>
-                    <div class="slider"><img id="picture" src="img/room.png" alt=""></div>
                </div>
             </div>
         </section>
@@ -99,7 +93,9 @@
                 <div class="header_of_third_section">
                     <h3 class="header-text common-font">online control</h3>
                     <img class="picture_of_camera" src="img/camera.svg" alt=""></div>
-                <div class="player"></div>
+                <div class="player">
+                    <img id="repair_img_3step" src="img/repair.png" alt="">
+                </div>
                 <div class="about_camera common-font black_text">
                     <div class="hate"><img id="picture_of_line" src="img/line.svg" alt=""></div> 
                     <p>At each facility, a camera is installed that broadcasts the progress of work on the clock. At any time, you can go to our website and monitor the progress of work in your apartment. You can watch the live broadcast from one of our facilities! Leave a request below and you will receive a link to the broadcast.</p>
@@ -249,12 +245,15 @@
                 </div>
                 <div class="gallery2">
                     <div class="first_col">
-                        <div class="picture1"><img id="picture1" src="img/image 5.png" alt=""></div>
+                        <div class="picture1"><img src="img/1234.png" alt=""></div>
                         <div class="picture2"><img src="img/tv.png" alt=""></div>
                     </div>
                     <div class="second_col">
                         <img src="img/sofa.png" alt="">
                         <img src="img/flower.png" alt="">
+                    </div>
+                    <div class="mobile_img">
+                        <img src="img/clock-for-mobile.png" alt="">
                     </div>
                 </div>
             </div>
@@ -361,7 +360,9 @@
                     </p>
                 </div>
                 <div class="sm"><img src="img/sm.svg" alt=""></div>
-                <div class="map"></div>
+                <div class="map">
+                    <img src="img/map_desktop.png" alt="">
+                </div>
             </div>
         </section>     
 
