--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
     <header>
-        <section class="header_nav">
+        <div class="conteiner header_nav">
             <nav class="header_content">
                 <p class="logo gold-text"><a href="#">IC "Repair Design Project"</a></p>
                 <ul class="mid_nav common-font">
@@ -34,24 +34,24 @@
                     <button class="gold-button" style="font-size: 0.8em;"><em>Request a call</em></button>
                 </div>
             </nav>
-        </section>
+        </div>
     </header>
 
     <main>
         <section class="first_step">
-            <div class="content_of_first_section">
+            <div class="conteiner content_of_first_section">
                 <div class="content_text">
                     <h1 class="header-text lead-header">Turnkey Repair in the <br> city of <span class="gold-text">Rostov-on-Don</span></h1>
                     <p class="common-font lead-text">Get ready-made turnkey repairs on time <br> with work time saving up to 45 days and 20% from <br> cost of materials due to the organization of work</p>
                     <div class="buttons">
                         <button class="calc common-font"><em>CALCULATE THE COST</em></button>
-                        <button class="sub common-font empty"><em>SUBMIT YOUR APPLICATION</e></button>
+                        <button class="sub common-font empty"><em>SUBMIT YOUR APPLICATION</em></button>
                     </div>
                 </div>
             </div>
         </section>
         <section class="second_step">
-            <div class="content_of_second_section">
+            <div class="conteiner content_of_second_section">
                 <div class="nav_of_second_section header-text">
                     <ul class="noss">
                         <li><a href="#"><span class="line">Rostov-on-Don, Admiral</span></a></li>
@@ -89,7 +89,7 @@
             </div>
         </section>
         <section class="third_step background_of_third_step">
-            <div class="content_of_third_section">
+            <div class="conteiner content_of_third_section">
                 <div class="header_of_third_section">
                     <h3 class="header-text common-font">online control</h3>
                     <img class="picture_of_camera" src="img/camera.svg" alt=""></div>
@@ -119,7 +119,7 @@
              </div> 
         </section>
         <section class="fourth_step">
-            <div class="content_of_fourth_section">
+            <div class="conteiner content_of_fourth_section">
                 <div class="header_of_fourth_section">
                     <h3 class="black_text header-text">TYPES OF REPAIR</h3>
                     <img id="repair" src="img/types_of_repair.svg" alt="">
@@ -175,7 +175,7 @@
             </div>
         </section>
         <section class="fifth_step">
-            <div class="content_of_fifth_step">
+            <div class="conteiner content_of_fifth_step">
                 <div class="list_of_fifth common-font black_text">
                     <div class="item_01">
                         <img src="img/01.svg" alt="">
@@ -221,7 +221,7 @@
             </div>
         </section>
         <section class="sixth_step">
-            <div class="content_of_sixth_step">
+            <div class="conteiner content_of_sixth_step">
                 <div class="first_col_of_six_step">
                     <div class="header_of_sixth_section">
                         <h3 class="header-text">We realize your <br>
@@ -259,7 +259,7 @@
             </div>
         </section>
         <section class="seventh_step">
-            <div class="content_of_seventh_step">
+            <div class="conteiner content_of_seventh_step">
                 <div class="header_of_fourth_section header_of_seventh_section">
                     <h3 class="black_text our_clients header-text">our clients</h3>
                     <img src="img/handshake.svg" alt="">
@@ -306,7 +306,7 @@
         </section>  
 
         <section class="mobile_form">
-            <div class="cnt_of_form">
+            <div class="conteiner cnt_of_form">
                 <form class="form common-font black_text mobile">
                     <h3 class="header-text">have any questions?</h3>
                     <div class="first_input">
@@ -329,7 +329,7 @@
             </div>
         </section>
         <section class="final_section">
-            <div class="content_of_final_section">
+            <div class="conteiner content_of_final_section">
                 <form class="form_of_fifth form_of_final common-font">
                     <div class="content_of_form content_of_final_form">
                         <p class="header-text">have any questions?</p>
@@ -370,7 +370,7 @@
 
 
     <footer>
-        <div class="content_of_footer">
+        <div class="conteiner content_of_footer">
             <div class="logo gold-text">IC "Repair Design Project"</div>
             <ul class="mid_nav common-font">
                 <li><a href="#">HOME</a></li>
