--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="conteiner header_nav">
             <nav class="header_content">
                 <p class="logo gold-text"><a href="#">IC "Repair Design Project"</a></p>
-                <ul class="mid_nav common-font">
+                <ul class="mid_nav ">
                     <li><a href="#">HOME</a></li>
                     <li><a href="#">PROJECTS</a></li>
                     <li><a href="#">MEASUREMENT</a></li>
@@ -29,8 +29,8 @@
                     <li><a href="#">REVIEWS</a></li>
                     <li><a href="#">CONTACTS</a></li>
                 </ul>
-                <div class="end_nav common-font">
-                    <div class="number common-font"><a href="callto:+7 (928) 768-32-39">+7 (928) 768-32-39</a></div>
+                <div class="end_nav">
+                    <div class="number"><a href="callto:+7 (928) 768-32-39">+7 (928) 768-32-39</a></div>
                     <button class="gold-button" style="font-size: 0.8em;"><em>Request a call</em></button>
                 </div>
             </nav>
