--- a/index.html
+++ b/index.html
@@ -111,8 +111,11 @@
                         <input type="text" name="phone" id="phone" placeholder="Your phone number:">
                     </div>
                     <button class="form_button gold-button common-font">SUBMIT</button>
-                    <div class="checkbox"><img src="img/checkbox.svg" alt="">  
-                        <p class="common-font black_text">I agree to the processing of personal data</p>
+                    <div class="checkbox">
+                        <label class="checkbox_container">I agree to the processing of personal data
+                            <input type="checkbox">
+                            <span class="checkmark"></span>
+                          </label>
                     </div>
                 </form>
                 
@@ -209,8 +212,11 @@
                             <label for="email">Email</label>
                             <input type="text" name="email" id="email" placeholder="Your email">
                         </div>
-                        <div class="checkbox second_check"><img src="img/checkbox.svg" alt="">  
-                            <p class="common-font">I agree to the processing of personal data</p>
+                        <div class="checkbox">
+                            <label class="checkbox_container">I agree to the processing of personal data
+                                <input type="checkbox">
+                                <span class="checkmark"></span>
+                              </label>
                         </div>
                         <button class="form_button gold-button measurer">Call the measurer</button>
                         <div class="piggy common-font">
@@ -322,8 +328,11 @@
                         <input type="text" name="question" id="question" placeholder="I want to know:">
                     </div>
                     <button class="form_button gold-button common-font">SUBMIT</button>
-                    <div class="checkbox"><img src="img/checkbox.svg" alt="">  
-                        <p class="common-font black_text">I agree to the processing of personal data</p>
+                    <div class="checkbox">
+                        <label class="checkbox_container">I agree to the processing of personal data
+                            <input type="checkbox">
+                            <span class="checkmark"></span>
+                          </label>
                     </div>
                 </form>
             </div>
@@ -346,8 +355,11 @@
                                 <label for="email">Email</label>
                                 <input type="text" name="email" id="email" placeholder="Your email">
                             </div>
-                            <div class="checkbox second_check final_check"><img src="img/checkbox.svg" alt="">  
-                                <p class="common-font">I agree to the processing of personal data</p>
+                            <div class="checkbox">
+                                <label class="checkbox_container">I agree to the processing of personal data
+                                    <input type="checkbox">
+                                    <span class="checkmark"></span>
+                                  </label>
                             </div>
 
                             <div class="button-wrapper"><button class="form_button gold-button common-font final_button">SUBMIT</button></div>
