--- a/index.html
+++ b/index.html
@@ -54,39 +54,92 @@
             <div class="conteiner content_of_second_section">
                 <div class="nav_of_second_section header-text">
                     <ul class="noss">
-                        <li><a href="#"><span class="line">Rostov-on-Don, Admiral</span></a></li>
-                        <li><a href="#">Sochi Thieves</a></li>
-                        <li><a href="#">Rostov-on-Don Patriotic</a></li>
+                        <li><span class="city active-city">Rostov-on-Don, Admiral</span></a></li>
+                        <li><span class="city">Sochi Thieves</span></a></li>
+                        <li><span class="city">Rostov-on-Don Patriotic</span></a></li>
                     </ul>
                 </div>
                <div class="test">
                     <div class="content_of_test">
                         <h2 class="header-text gold-text ">Completed <br> projects</h2>
                         <p class="common-font">Only a small part of the work performed by our company is presented on the site. For 14 years on in the construction     market we have made happy more than 1000 families</p>
-                        <div class="wrapper"><img id="picture" src="img/room.png" alt=""></div>
-                       <div class="description">
-                            <div>
-                                <h3>City:</h3>
-                                <p class="common-font">Rostov-on-Don <br> 
-                                    LCD admiral</p>
-                            </div>
-                            <div>
-                                <h3>Repair time:</h3>
-                                <p class="common-font">3.5 months</p>
-                            </div>
-                            <div>
-                                <h3>apartment area:</h3>
-                                <p class="common-font">81 m2</p>
-                            </div>
-                            <div>
-                                <h3>Repair Cost:</h3>
-                                <p class="common-font">Upon request</p>
-                            </div>
-                        </div>
-                        <div class="slider_arrows"><img src="img/slider_arrows.svg" alt=""></div>
+               </div>
+               
+            </div>
+            <div class="description">
+               <div class="description-slide active-description">
+                    <div>
+                        <h3>City:</h3>
+                        <p class="common-font">Rostov-on-Don <br> 
+                            LCD admiral</p>
+                    </div>
+                    <div>
+                        <h3>Repair time:</h3>
+                        <p class="common-font">3.5 months</p>
+                    </div>
+                    <div>
+                        <h3>apartment area:</h3>
+                        <p class="common-font">81 m2</p>
+                    </div>
+                    <div>
+                        <h3>Repair Cost:</h3>
+                        <p class="common-font">Upon request</p>
                     </div>
                </div>
+               <div class="description-slide">
+                    <div>
+                        <h3>City:</h3>
+                        <p class="common-font">Sochi<br> 
+                            Thieves</p>
+                    </div>
+                    <div>
+                        <h3>Repair time:</h3>
+                        <p class="common-font">4.5 months</p>
+                    </div>
+                    <div>
+                        <h3>apartment area:</h3>
+                        <p class="common-font">95 m2</p>
+                    </div>
+                    <div>
+                        <h3>Repair Cost:</h3>
+                        <p class="common-font">Upon request</p>
+                    </div>
+               </div>
+               <div class="description-slide">
+                    <div>
+                        <h3>City:</h3>
+                        <p class="common-font">Rostov-on-Don <br> 
+                            Patriotic</p>
+                    </div>
+                    <div>
+                        <h3>Repair time:</h3>
+                        <p class="common-font">2.5 months</p>
+                    </div>
+                    <div>
+                        <h3>apartment area:</h3>
+                        <p class="common-font">70 m2</p>
+                    </div>
+                    <div>
+                        <h3>Repair Cost:</h3>
+                        <p class="common-font">Upon request</p>
+                    </div>
+               </div>
+                <div class="slider_arrows">
+                    <div class="description-arrow-left">&#8592;</div>
+                    <div class="dots">
+                        <div class="dot"></div>
+                        <div class="dot"></div>
+                        <div class="dot"></div>
+                    </div>
+                    <div class="description-arrow-right">&#8594;</div>
+                </div>
             </div>
+
+            <div id="slider">
+                <div class="left-arrow"></div>
+                <div class="right-arrow"></div>
+            </div>
+            
         </section>
         <section class="third_step background_of_third_step">
             <div class="conteiner content_of_third_section">
@@ -398,5 +451,7 @@
             </div>
         </div>    
     </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
